Fixed bug #30045 (Cannot pass big integers (> 2147483647) in SOAP requests)